Fix link wrapping

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -133,6 +133,7 @@ input {
 
 #dirs a {
     margin-right:1rem;
+    display: inline-block;
 }
 
 .right {
